# div296_cgt_reset

./: .gitattributes  .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: BUILD_PLAN.md  USER_GUIDE_Adviser_Edition.docx  USER_GUIDE_Adviser_Edition_v2.docx  USER_GUIDE_Adviser_Edition_v3.docx  USER_GUIDE_Full_Edition_v3.docx
docs/fable-review/: 00_MANDATE_AND_SCOPE.md  01_DOMAIN_AND_LAW.md  02_ARCHITECTURE_MAP.md  03_ACCEPTANCE_AND_INVARIANTS.md  04_CODE_READING_GUIDE.md  05_FABLE_REVIEW_PROMPT.md  FINDINGS.md  FINDINGS_WEB.md  README.md
docs/hosting/: IT-request.md  README.md
docs/hosting/spfx/: BUILD.md  build-spfx-markup.mjs
docs/hosting/spfx/config/: package-solution.json
docs/hosting/spfx/src/webparts/div296Calculator/: Div296CalculatorWebPart.manifest.json  Div296CalculatorWebPart.ts  calcs.ts  markup.ts  ui.ts
docs/mockups/: 2026-05-22-analyser-v2.html
docs/superpowers/plans/: 2026-05-22-v2-ux-pass.md  2026-06-10-audit-fix-pack.md  2026-06-20-div296-ongoing-calculator.md
docs/superpowers/specs/: 2026-05-22-v2-ux-pass-design.md  2026-06-01-class-import-mapping-design.md  2026-06-20-div296-ongoing-calculator-design.md
scripts/: build_user_guide.py  build_user_guide_v2.py  build_user_guide_v3.py  export_pdf.py  recalc.py
src/div296/: __init__.py  _formulas.py  _recalc_limitations.py  assumptions.py  build.py  calcs.py  named_ranges.py  styles.py
src/div296/tabs/: analyser.py  class_import.py  comparison.py  inputs.py  notes.py
src/div296_calc/: __init__.py  _formulas.py  assumptions.py  build.py  calcs.py  named_ranges.py
src/div296_calc/tabs/: __init__.py  calculator.py  notes.py
tests/: test_adviser_edition.py  test_calcs.py  test_export_pdf.py  test_formula_golden.py  test_integration.py  test_workbook.py
tests/div296_calc/: test_calc_assumptions.py  test_calc_build.py  test_calc_engine.py  test_calc_formulas_golden.py  test_calc_integration.py
web/: PROGRESS.md  README.md  app.js  build-standalone.mjs  calcs.js  index.html  styles.css
web/standalone/: div296-reset-calculator.html
web/tests/: parity.test.js
