[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "div296"
version = "0.1.0"
description = "Division 296 CGT Cost Base Reset Model — Excel workbook builder"
requires-python = ">=3.11"
authors = [{ name = "AidenHiew" }]
license = { text = "Proprietary" }
dependencies = [
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
div296-build = "div296.build:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
