[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "div296"
version = "1.0.0"
description = "Division 296 CGT Cost Base Reset Model — Excel workbook builder"
requires-python = ">=3.11"
authors = [{ name = "AidenHiew" }]
license = { text = "Proprietary" }
dependencies = [
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",   # parallel test execution: pytest -n auto
    "ruff>=0.5",
    "formulas>=1.2",     # pure-Python xlsx recalc for the integration test
]

[project.scripts]
div296-build = "div296.build:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: live xlsx recalc via the `formulas` package (~30s+). Skip on dev runs with `-m 'not slow'`.",
]

[tool.ruff]
line-length = 100
target-version = "py311"
